web/components/information/style.scss
@import 'web/components/common.scss';

$boxHeight: 250px;
$boxWith: 280px;
$border: 1px solid #f3ebeb;
.container {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  
  & .box {
    width: $boxWith;
    height: $boxHeight;
    margin: 60px 0 0 160px;
    border-radius: 5px;
    background: #fff;
    font-family: '方正兰亭超细黑简体';
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
  }
}

.loading {
  $size: 25;
  position: relative;
  top: ($boxHeight - $size) * 0.3;
  left: ($boxWith - $size) / 2;
  @include img ($size, 'loading')
}

.transfer-container {
  width: 100%;
  height: 100%;
}

.person-info {
  $height: $boxHeight * 0.6;
  width: 100%;
  padding: 20px;
  height: $height;
  border-bottom: $border;
  & ul {
    width: 100%;
    height: 60px;
    overflow: hidden;
  }
  & li {
    float: left;
    width: 33%;
    height: 100%;
    line-height: $height * 0.7;
    border-right: $border;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

.person-value:last-child {
  border: none;
}

.person-value span:last-child:hover {
  color: #444;
}

@mixin commonSpan ($size, $color) {
  font-size: $size + px;
  font-weight: bold;
  color: $color;
  display: block;
  line-height: 30px;
  cursor: pointer;
}
.person-value span:first-child {
  font-family: 'tahoma';
  @include commonSpan(25, #000);
}

.person-value span:last-child {
  @include commonSpan(12, #666);
}

.check-in {
  $height: 30px;
  width: 95px;
  height: $height;
  line-height: $height;
  text-align: center;
  margin: 25px auto;
  font-weight: bold;
  color: #3a3535;
  font-weight: bold;
  font-size: 14px;
  border: 1px solid #ddd;
  border-radius: 20px;
  cursor: pointer;
  & i {
    $size: 18px;
    display: inline-block;
    position: relative;
    top: 4px;
    height: $size;
    width: $size;
    margin-right: 10px;
    background: url('../../assets/check-in.svg') no-repeat;
    background-size: contain;
  }
}

.check-in:hover {
  background: #f5f5f5;
}

.set-info {
  width: 100%;
  font-family: 'tahoma';
  height: $boxHeight * 0.4;
  & li {
    height: 40%;
    margin-bottom: 10px;
    display: flex;
    justify-items: center;
  }
  & li:hover {
    background: #f2f2f3;
  }
  & div {
    $height: 50px;
    width: 50%;
    height: $height;
    display: flex;
    align-items: center;
    cursor: pointer;
  }
}

@mixin icon ($size, $url, $isRight) {
  width: $size + px;
  height: $size + px;
  background: url('../../assets/' + $url + '.svg');
  background-size: cover;
  @if ($isRight == 1) {
    margin: 0 10px 0 15px;
  } @else {
    margin: 0 15px 0 10px;
  }
}
.info-head {
  justify-content: flex-start;
  font-size: 13px;
}

.info-head:first-child i {
  @include icon(18, 'level', 1);
}

.info-head:last-child i {
  @include icon(18, 'exit', 1);
}

.info-value {
  justify-content: flex-end;
  font-size: 12px;
  font-family: '方正兰亭超细黑简体';
  & i {
    @include icon(18, 'right', 0);
  }
}

